--- a/verkefni.tex
+++ b/verkefni.tex
@@ -288,7 +288,7 @@ To prove one of the lemmas we will also use the following famous theorem:
 % TODO finish these
 Pointwise bounded and equicontinuity.
 \end{definition}
-\begin{theorem}[Arzela-Ascoli] %TODO prove this or move it to preliminaries
+\begin{theorem}[Ascoli-Arzela] %TODO prove this or move it to preliminaries
 Let $\mathcal{F}$ be a pointwise bounded equicontinuous collection of complex functions on a metric space $(X, d)$, and $X$ contains a countable dense subset.  %TODO change to 'X is separable'
 Then every sequence in $\mathcal{F}$ contains a subsequence that converges uniformly on every compact subsets of $X$.
 \end{theorem}
